# hypertrends-enhance-research

docs/best-practices/nicetohave/: STAGE2-BRAZE-STRATEGY.md
docs/system/: BRAZE-DUPLICATES-FOR-MARKETING.md  BRAZE-DUPLICATES-PARA-MARKETING.md  BRAZE-DUPLICATES-REPORT-EN.md  BRAZE-DUPLICATES-REPORT.md  BRAZE-EVENTS-AND-ATTRIBUTES-CONSOLIDATION.md  STAGE1-SYSTEM-OVERVIEW.md  STAGE2-BRAZE-STRATEGY.md
telemetry/: .gitignore  README.md  pyproject.toml  telemetry-plan.md
telemetry/.plan/: all-events.html  api-plan.html  backend-usage.html  braze-sdk-playground.html  braze-to-telemetry-migration.html  catalog-system-config-plan.html  catalog-system-config-plan.md  event-inventory.json  events.md  frontend-usage.html  payload-usage.html  playground-events-catalog.normalized.json  tasks.html  telemetry-genial-es.html
telemetry/app/: __init__.py  admin_audit.py  braze_forward.py  catalog_policy.py  catalog_validate.py  db.py  deps.py  ingest_audit.py  main.py
telemetry/app/routers/: admin_catalog.py  admin_config.py  catalog.py  ingest.py
telemetry/app/schemas/: __init__.py  admin.py  ingest.py
telemetry/docs/: API.md
telemetry/scripts/: gen_playground_events.py  gen_playground_events_catalog.py  generate_postgres_seed_sql.py
telemetry/sql/: 001_catalog_and_config.sql  002_telemetry_ingest_audit.sql  003_telemetry_admin_audit.sql
telemetry/sql/seed/: 010_catalog_inserts.sql  020_system_config_inserts.sql
telemetry/tests/: conftest.py  test_admin_auth.py  test_catalog_validate.py  test_ingest_and_catalog_http.py
